create static class to create triangles & seed array

--- a/triApi.csproj
+++ b/triApi.csproj
@@ -159,6 +159,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Triangle.cs" />
+    <Compile Include="Models\TriangleSeed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
